# Blockchain-Powered-Secure-Data-Sharing-Platform

./: README.md
benchmark/: README.md  YCSB_crash_queries  benchbase_create_shared_tables.sql  run_benchmark
benchmark/benchmark-scripts/: YCSB_azure.sh  YCSB_local.sh  plots.py
benchmark/benchmark_results/: Ethereum_Results_LOCAL_TABLE.txt  Ethereum_Results_SHARED_TABLE.txt
benchmark/benchmarks_src/: benchmark_properties.properties
benchmark/results_benchbase_mysql/: tpcc_2022-12-13_08-16-15.metrics.json  tpcc_2022-12-13_08-16-15.params.json  tpcc_2022-12-13_08-16-15.raw.csv  tpcc_2022-12-13_08-16-15.results.Delivery.csv  tpcc_2022-12-13_08-16-15.results.NewOrder.csv  tpcc_2022-12-13_08-16-15.results.OrderStatus.csv  tpcc_2022-12-13_08-16-15.results.Payment.csv  tpcc_2022-12-13_08-16-15.results.StockLevel.csv  tpcc_2022-12-13_08-16-15.results.csv  tpcc_2022-12-13_08-16-15.samples.csv  tpcc_2022-12-13_08-16-15.summary.json
benchmark/tpcc-mysql/: README.md  create_shared_table.sql  create_table.sql  run_benchmark.sh  tpcc_load  tpcc_start
dashboard/: .dockerignore  .eslintrc.js  Dockerfile  README.md  lerna.json  package.json
dashboard/backend/: README.md  app.js  package.json  server.js  swagger.js
dashboard/blockchain-monitor/: README.md  index.js  package.json
dashboard/configs/: app.properties
trustdble-server/: README.md
trustdble-server/blockchain-adapter/cli/src/: CMakeLists.txt  adapter_cli.cpp  config.ini
trustdble-server/blockchain-adapter/fabric/adapter/: CMakeLists.txt
trustdble-server/blockchain-adapter/fabric/adapter/docs/: 00_fabric_mainpage.md  01_fabric_adapter.md  02_fabric_contract.md
trustdble-server/blockchain-adapter/fabric/adapter/include/adapter_fabric/: adapter_fabric.h  client_fabric.h  config_fabric.h
trustdble-server/blockchain-adapter/fabric/adapter/src/: CMakeLists.txt  adapter_fabric.cpp  client_fabric.cpp
trustdble-server/blockchain-adapter/fabric/adapter/tests/: fabric-t.cpp  test-config.ini
trustdble-server/blockchain-adapter/stub/adapter/src/: CMakeLists.txt  adapter_stub.cpp  blocknumber.cpp
trustdble-server/blockchain-manager/: CMakeLists.txt  README.md  bitbucket-pipelines.yml
trustdble-server/blockchain-manager/.devcontainer/: Dockerfile  devcontainer.json
trustdble-server/blockchain-manager/.githooks/pre-commit.d/: 02_code-formatting.sh
trustdble-server/blockchain-manager/.githooks/pre-push.d/: 01_sanitizer_check.sh
trustdble-server/blockchain-manager/cli/: CMakeLists.txt
trustdble-server/blockchain-manager/cli/src/: CMakeLists.txt  config.ini  manager_cli.cpp
trustdble-server/blockchain-manager/cmake/: test_macros.cmake  trustdble_configure.cmake
trustdble-server/blockchain-manager/ethereum/manager/: CMakeLists.txt
trustdble-server/blockchain-manager/ethereum/manager/docs/: 01_ethereum_network_config.md
trustdble-server/blockchain-manager/ethereum/manager/include/manager_ethereum/: config_ethereum.h  manager_ethereum.h  networkconfig_ethereum.h
trustdble-server/blockchain-manager/ethereum/manager/src/: CMakeLists.txt  manager_ethereum.cpp
trustdble-server/blockchain-manager/ethereum/manager/tests/: CMakeLists.txt  ethereum-t.cpp  test-config.ini
trustdble-server/blockchain-manager/ethereum/scripts/: start-network.sh
trustdble-server/blockchain-manager/ethereum/scripts/ethereum-docker/: Dockerfile  generateKey.sh  installSpecificGeth.sh  start-ethereum.sh
trustdble-server/blockchain-manager/ethereum/scripts/ethereum-docker/resources/: privateKey  privkey.pem  pubkey.pem
trustdble-server/blockchain-manager/fabric/: README.md
trustdble-server/blockchain-manager/fabric/manager/: CMakeLists.txt
trustdble-server/blockchain-manager/fabric/manager/include/manager_fabric/: config_fabric.h  manager_fabric.h  networkconfig_fabric.h
trustdble-server/blockchain-manager/fabric/manager/src/: CMakeLists.txt  manager_fabric.cpp
trustdble-server/blockchain-manager/fabric/manager/tests/: CMakeLists.txt  fabric-t.cpp  test-config.ini
trustdble-server/blockchain-manager/fabric/scripts/: network.sh
trustdble-server/blockchain-manager/fabric/scripts/fabric-docker/: docker-compose-test-peer.yaml
trustdble-server/blockchain-manager/factory/include/bc_manager_factory/: bc_manager_factory.h
trustdble-server/blockchain-manager/factory/src/: CMakeLists.txt  bc_manager_factory.cpp
trustdble-server/blockchain-manager/interface/: CMakeLists.txt
trustdble-server/blockchain-manager/interface/include/bc_manager_interface/: bc_manager_config.h  bc_manager_interface.h  bc_manager_networkconfig.h
trustdble-server/blockchain-manager/interface/tests/: bc_manager_interface_test.cpp  bc_manager_interface_test.h
trustdble-server/blockchain-manager/stub/manager/: CMakeLists.txt
trustdble-server/blockchain-manager/stub/manager/include/manager_stub/: config_stub.h  manager_stub.h  networkconfig_stub.h
trustdble-server/blockchain-manager/stub/manager/src/: CMakeLists.txt  manager_stub.cpp
trustdble-server/blockchain-manager/stub/manager/tests/: CMakeLists.txt  stub-t.cpp  test-config.ini
trustdble-server/blockchain-manager/trustdble_scripts/: .constants.sh  build.sh  test.sh
trustdble-server/blockchain-manager/utils/include/manager_utils/: shell_helpers.h
trustdble-server/blockchain-manager/utils/src/: CMakeLists.txt  shell_helpers.cpp
trustdble-server/server/plugin/data_contracts/: CMakeLists.txt  Makefile  UDF.cc  client.py  datacontract.proto  get_sgx_measurement.py  logic.txt  python.manifest.template  read_logic.py  server.py
trustdble-server/server/plugin/rewrite_trustdble/: CMakeLists.txt  README.md
trustdble-server/server/plugin/rewrite_trustdble/include/: rewrite_trustdble.h  trustdble_command.h  trustdble_invite.h
trustdble-server/server/plugin/rewrite_trustdble/scripts/: setup_trustdble.sql
trustdble-server/server/plugin/rewrite_trustdble/src/: rewrite_trustdble.cc  rewrite_trustdble_plugin.cc  trustdble_command.cc  trustdble_invite.cc
trustdble-server/server/plugin/rewrite_trustdble/tests/: CMakeLists.txt  rewrite_trustdble-t.cc  trustdble_invite-t.cc
(+210 files in other folders)
